--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "Mahmoud Mheisen",
+  "description": "A Boilerplate for FCC API and Microservices Challenges",
   "dependencies": {
     "express": "^4.14.0"
   },
