--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "fcc-learn-npm-package-json",
   "author": "Mahmoud Mheisen",
   "description": "A Boilerplate for FCC API and Microservices Challenges",
+  "keywords": [
+    "freecodecamp",
+    "boilerplate",
+    "API and Microservices",
+    "Challenges"
+  ],
   "dependencies": {
     "express": "^4.14.0"
   },
