add license to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fcc-learn-npm-package-json",
   "author": "Mahmoud Mheisen",
   "description": "A Boilerplate for FCC API and Microservices Challenges",
+  "license": "MIT",
   "keywords": [
     "freecodecamp",
     "boilerplate",
