--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Challenges"
   ],
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "moment": "2.14.0"
   },
   "main": "server.js",
   "scripts": {
